VPC Template.yml
AWSTemplateFormatVersion: 2010-09-09

Parameters:
  EnvironmentName:
    Description: An environment name that is prefixed to resource names
    Type: String
    Default: "DE-Extract"

  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 192.168.0.0/16
  
  DataCenterPublicSubnetCIDR:
    Description: The IPv4 address space (CIDR notation) for the publicly accessible portion of the VPC
    Type: String
    Default: 192.168.10.0/24

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  DataCenterPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref DataCenterPublicSubnetCIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: "DE-Extract Data Center Subnet"

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "DE-Extract Public Routes"

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  DataCenterPublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref DataCenterPublicSubnet

 WindowsInstanceSG: 
    Properties:
      VpcId: !Ref VPC
      GroupName: DE-Extract-WindowsInstanceSG
      SecurityGroup: GroupDescription
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: "DE-Extract-WindowsInstanceSG"
  
  FileServerSG: 
    Properties:
      VpcId: !Ref VPC
      GroupName: DE-Extract-FileServerSG
      SecurityGroup: GroupDescription
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 192.168.10.0/24
      Tags:
        - Key: Name
          Value: "DE-Extract-FileServerSG"

  FileGatewaySG: 
    Properties:
      VpcId: !Ref VPC
      GroupName: DE-Extract-FileGatewaySG
      SecurityGroup: GroupDescription
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 1
          ToPort: 65534
          CidrIp: 192.168.0.0/16
      Tags:
        - Key: Name
          Value: "DE-Extract-FileGatewaySG"
